syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
   rpc hash(HashRequest) returns (HashResponse);
   // reference : https://github.com/john-french/distributed-systems-labs/tree/master/grpc-async-inventory
   rpc validate(ValidationRequest) returns (google.protobuf.BoolValue);
}

message HashRequest {
	int32 userId = 1;
    string password = 2;   
}

message HashResponse {
	int32 user_id = 1;
    bytes hashed_password = 2;
    bytes salt = 3; 
}

message ValidationRequest {
	string password = 1;
	bytes hashed_password = 2;
	bytes salt = 3;
}
